# neuralhydrology

./: .gitignore  CODEOWNERS  pyproject.toml
neuralhydrology/datautils/: pet.py
neuralhydrology/evaluation/: evaluate.py
neuralhydrology/jax/: __init__.py  checkpoint.py  config.py  data.py
neuralhydrology/jax/evaluation/: __init__.py  tester.py
neuralhydrology/jax/modelzoo/: __init__.py
neuralhydrology/jax/training/: __init__.py  loss.py  optim.py  train_state.py  trainer.py
neuralhydrology/modelzoo/: shm.py
neuralhydrology/training/: train.py
neuralhydrology/utils/: config.py
test/: test_jax_backend_plumbing.py
