[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralhydrology"
dynamic = ["version"]
description = "Library for training deep learning models with environmental focus"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Frederik Kratzert", email = "neuralhydrology@googlegroups.com"},
    {name = "Daniel Klotz", email = "neuralhydrology@googlegroups.com"},
    {name = "Martin Gauch", email = "neuralhydrology@googlegroups.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "ruamel.yaml",
    "torch",
    "scipy",
    "tensorboard",
    "tqdm",
    "xarray",
    "netcdf4",
    "h5py"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "yapf",
    "bokeh",
    "jupyter",
    "ipykernel>=7.3.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme>=3.0.0",
    "nbsphinx>=0.8.0",
    "nbsphinx-link>=1.3.0",
    "docutils<0.21",  # To avoid https://github.com/vidartf/nbsphinx-link/issues/25.
    "ipython",
]
jax = [
    "flax>=0.10.7",
    "jax>=0.6.2 ; sys_platform != 'linux'",
    "jax[cuda13]>=0.6.2 ; sys_platform == 'linux'",
    "optax>=0.2.8",
]

[project.urls]
Documentation = "https://neuralhydrology.readthedocs.io"
Source = "https://github.com/neuralhydrology/neuralhydrology"
"Research Blog" = "https://neuralhydrology.github.io/"

[project.scripts]
nh-schedule-runs = "neuralhydrology.nh_run_scheduler:_main"
nh-run = "neuralhydrology.nh_run:_main"
nh-results-ensemble = "neuralhydrology.utils.nh_results_ensemble:_main"

[tool.setuptools.dynamic]
version = {attr = "neuralhydrology.__about__.__version__"}

[tool.setuptools.packages.find]
include = ["neuralhydrology", "neuralhydrology.*"]
